feat: bound request flow execution
